- Updates types to account for SOAP/REST discrepency with `editAccessRights` and `editWorkflowSettings` endpoints
