# types/types.js
@@ -874,7 +874,14 @@
  */
 
 /**
- * @typedef {Object} AccessRightsInformation
+ * @typedef {Object} AccessRightsInformationSend
+ * @property {AclEntries[]} [aclEntries]
+ * - Optional list of Access Control List entries.
+ * @property {AllLevel} allLevel
+ * - REQUIRED: Defines the access level for all users.
+ */
+/**
+ * @typedef {Object} AccessRightsInformationReceive
  * @property {Identifier} identifier
  * - REQUIRED: Unique identifier for the asset or component whose access rights are being defined.
  * @property {AclEntries[]} [aclEntries]
@@ -884,7 +891,20 @@
  */
 
 /**
- * @typedef {Object} WorkflowSettings
+ * @typedef {Object} WorkflowSettingsSend
+ * - Complete data with the workflow settings of a folder
+ * @property {AssetIdentifiers[]} [workflowDefinitions]
+ * - NOT REQUIRED: Workflow definitions associated with this folder.
+ * @property {boolean} [inheritWorkflows]
+ * - NOT REQUIRED: Determines whether the workflow settings are inherited from the parent folder.
+ * @property {boolean} [requireWorkflow]
+ * - NOT REQUIRED: Indicates whether a workflow is required for this folder.
+ * @property {AssetIdentifiers[]} [inheritedWorkflowDefinitions]
+ * - NOT REQUIRED: Inherited workflow definitions from the parent folder. Ignored on edit.
+ */
+
+/**
+ * @typedef {Object} WorkflowSettingsReceive
  * - Complete data with the workflow settings of a folder
  * @property {Identifier} identifier
  * - REQUIRED: Identifier for the workflow settings of a folder.
@@ -2531,7 +2551,7 @@
 
 /**
  * @typedef {Object} ReadAccessRightsResult
- * @property {AccessRightsInformation} accessRightsInformation
+ * @property {AccessRightsInformationReceive} accessRightsInformation
  */
 
 /**
@@ -2543,7 +2563,9 @@
 //#region
 /**
  * @typedef {Object} EditAccessRightsRequest
- * @property {AccessRightsInformation} accessRightsInformation
+ * @property {Identifier} identifier
+ * - REQUIRED: Unique identifier for the asset or component whose access rights are being defined.
+ * @property {AccessRightsInformationSend} accessRightsInformation
  * - REQUIRED: Complete information about the access rights of an asset or component.
  * @property {boolean} [applyToChildren]
  * - NOT REQUIRED: Indicates whether to apply the access rights to children. Default is false.
@@ -2571,7 +2593,7 @@
 //#region
 /**
  * @typedef {Object} ReadWorkflowSettingsResult
- * @property {WorkflowSettings} workflowSettings
+ * @property {WorkflowSettingsReceive} workflowSettings
  * - REQUIRED: A result of reading the workflow information of a folder.
  */
 
@@ -2584,7 +2606,9 @@
 //#region
 /**
  * @typedef {Object} EditWorkflowSettingsRequest
- * @property {WorkflowSettings} workflowSettings
+ * @property {Identifier} identifier
+ * - REQUIRED: Identifier for the workflow settings of a folder.
+ * @property {WorkflowSettingsSend} workflowSettings
  * - REQUIRED: The workflow settings to be edited.
  * @property {boolean} [applyInheritWorkflowsToChildren]
  * - NOT REQUIRED: Determines whether to apply the 'inheritWorkflows' settings to children folders. Default is false.
